sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/PLS_FB_Order__c.object-meta.xml
<CustomObject>
    <label>PLS FB Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLS FB Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>