sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Amount__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>