sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Customer_Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>