sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Escalated__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Escalated__c</fullName>
    <label>Escalated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>