sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_External_Ref__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_External_Ref__c</fullName>
    <label>External Reference</label>
    <type>Text</type>
    <length>30</length>
</CustomField>