sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Ledger_Code__c</fullName>
    <label>Ledger Code</label>
    <type>Text</type>
    <length>20</length>
</CustomField>