sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Line_Count__c</fullName>
    <label>Line Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>