sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Promised_Date__c</fullName>
    <label>Promised Date</label>
    <type>Date</type>
</CustomField>