sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order__c/fields/PLS_FB_SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_SLA_Deadline__c</fullName>
    <label>SLA Deadline</label>
    <type>Date</type>
</CustomField>